--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "*"
-crossterm = "*"
-cursor = "*"
-win32console ="*"
-term_size="*"
-console="*"
+rand = "0.8.5"
+crossterm = "0.25.0"
+cursor = "2.3.0"
+win32console ="0.1.5"
+term_size="0.3.2"
+console="0.15.3"
